  31 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> cgminer-2.9.5.ebuild:
  Depend on virtual/udev instead of sys-fs/udev.

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  cgminer-3.1.0.ebuild:
  Remove some more cpumining leftovers.

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  cgminer-3.1.0.ebuild:
  Remove cpumining related USE flags from IUSE and DEPEND.

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  cgminer-3.1.0.ebuild:
  Remove cpumining and related USE flags.

*cgminer-3.1.0 (03 May 2013)

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -cgminer-3.0.0.ebuild, +cgminer-3.1.0.ebuild:
  Version bump.

*cgminer-2.11.4 (23 Apr 2013)

  23 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +cgminer-2.11.4.ebuild:
  Keep 2.11.4 for CPU mining.

*cgminer-3.0.0 (22 Apr 2013)

  22 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -cgminer-2.11.3.ebuild, +cgminer-3.0.0.ebuild:
  Version bump.

*cgminer-2.11.3 (21 Mar 2013)

  21 Mar 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -cgminer-2.11.2.ebuild, +cgminer-2.11.3.ebuild:
  Bump version.

*cgminer-2.11.2 (14 Mar 2013)

  14 Mar 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -cgminer-2.10.5.ebuild, +cgminer-2.11.2.ebuild:
  Version bump.

*cgminer-2.10.5 (08 Feb 2013)

  08 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -cgminer-2.10.4.ebuild, +cgminer-2.10.5.ebuild:
  Version bump. Added SRC_URI for latest version.

*cgminer-2.10.4 (07 Feb 2013)

  07 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -cgminer-2.9.5.ebuild, +cgminer-2.10.4.ebuild:
  Version bump.

*cgminer-2.9.5 (28 Nov 2012)

  28 Nov 2012; Stijn Tintel <stijn+bugs@linux-ipv6.be> +cgminer-2.9.5.ebuild,
  +metadata.xml, +ChangeLog

  Initial commit, based on 2.7.5 upstream